# k8s-playground

./: README.md  docker-compose.yml
backend-service/: Cargo.toml  Dockerfile
backend-service/src/: main.rs
frontend/: .gitignore  Dockerfile
frontend/src/: Main.elm
kubernetes/: backend-deployment.yaml  backend-ingress.yaml  backend-namespace.yaml  backend-service.yaml
tutorials/: 0._kubernetes_terminology.md  1._Try_out_the_services.md  2._Login_to_Kubernetes.md  3._Deploy_the_backend_to_Kubernetes.md  4._Deploy_the_frontend_to_kubernetes.md  5._Expose_the_frontend_to_the_outside_world.md  6._Provide_AWS_access_to_backend.md
