[package]
name = "backend-service"
version = "0.1.0"
authors = ["guydunton <guydunton@economist.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gotham = "0.4.0"
rand = "0.7.3"
http = "0.1.0"
hyper = "0.12"
mime = "0.3.16"
